# data-scrapper

./: CMakeLists.txt  Dockerfile  README.md
scripts/: build.sh  clean.sh  docker.sh  login.sh  test.sh
src/: Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h  Controller.cpp  Controller.h  CurlData.cpp  CurlData.h  CurlScrapper.cpp  CurlScrapper.h  CurlSettings.cpp  CurlSettings.h  Data.h  DataCollectingThread.cpp  DataCollectingThread.h  DataCollector.h  DataCollectorFactory.cpp  DataCollectorFactory.h  DataCollectorSettings.h  DataCollectorSettingsFactory.cpp  DataCollectorSettingsFactory.h  DataSettings.h  DataSettingsFactory.cpp  DataSettingsFactory.h  DataStorage.h  DataStorageFactory.cpp  DataStorageFactory.h  LocalDataStorage.cpp  LocalDataStorage.h  Server.cpp  Server.h  Utils.cpp  Utils.h  main.cpp
test/: CMakeLists.txt  DataScrapperTest.cpp  test_geo.json
