project (DataScrapper)
cmake_minimum_required(VERSION 3.2)
find_package(CURL REQUIRED)
set(Boost_USE_STATIC_LIBS ON)
find_package(Boost REQUIRED COMPONENTS log)
find_package(Threads REQUIRED)
include_directories(${Boost_INCLUDE_DIRS} include src)
add_executable(DataScrapper src/main.cpp src/CurlData.cpp src/CurlScrapper.cpp src/CurlSettings.cpp src/LocalDataStorage.cpp src/Server.cpp src/Utils.cpp src/DataCollectorFactory.cpp src/DataStorageFactory.cpp src/DataCollectorSettingsFactory.cpp src/Controller.cpp src/Command.cpp src/CommandQueue.cpp src/DataCollectingThread.cpp)
target_link_libraries(DataScrapper pthread ${Boost_LIBRARIES} ${CURL_LIBRARIES})