project (DataScrapperTest)
find_package(GTest REQUIRED)
find_package(CURL REQUIRED)
set(Boost_USE_STATIC_LIBS ON)
find_package(Boost REQUIRED COMPONENTS log)
find_package(Threads REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ../include ../src)
add_executable(DataScrapperTest DataScrapperTest.cpp ../src/CurlData.cpp ../src/CurlScrapper.cpp ../src/CurlSettings.cpp ../src/LocalDataStorage.cpp ../src/Server.cpp ../src/Utils.cpp ../src/DataSettingsFactory.cpp ../src/DataStorageFactory.cpp ../src/DataCollectorFactory.cpp ../src/Controller.cpp ../src/Command.cpp ../src/CommandQueue.cpp ../src/DataCollectingThread.cpp)
target_link_libraries(DataScrapperTest ${GTEST_LIBRARIES} pthread ${Boost_LIBRARIES} ${CURL_LIBRARIES})